# kafka-test-app

./: README.md  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yaml  release.yaml
assets/grafana/dashboards/: kafka_cluster.json
lib/charms/kafka/v0/: client.py
src/: charm.py  literals.py  models.py
tests/integration/: conftest.py  helpers.py  test_charm.py
tests/unit/: test_charm.py
